5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1723_2505.log
== TEST (2019-05-14 11:01:15) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = x - (x **(2 * 1 + 1)/factorial(2 * i + 1) + (x ** (4 * i +1)/factorial(4 * i +1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:48) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (4 * i +1)/factorial(4 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:02:20) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (4 * i + 1)/factorial(4 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:02) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (4 * i + 1)/factorial(4 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:31) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (4 * i + 1)/factorial(4 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:48) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (4 * i + 1)/factorial(4 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:08) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (4 * i + 1)/factorial(4 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:46) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1

while(i <= fim):
	soma = x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (4 * i + 1)/factorial(4 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:06:53) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:58) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:08:29) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while (i <= fim):
	soma = x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:02) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while (i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:48) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while (i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:10:30) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while (i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = 1 + i
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = 1 + i
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:11:38) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while (i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = 1 + i
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = 1 + i
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:12:07) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while (i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:12:25) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while (i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:12:36) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))

soma = 0
i = 0
fim = k - 1
while (i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:13:05) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while (i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:13:25) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while (i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:14:59) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while (i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:15:31) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:15:45) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:16:01) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:16:33) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:17) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:50) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:53) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:54) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:55) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:08) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:27) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1)/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:46) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:49) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1)/factorial(2 * i + 1) + (x ** (2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:19:57) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x ** (2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- OUTPUT:
1.5707963268
3.1415926536
4.7123889804
6.2831853072
7.853981634
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:20:21) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x ** (2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
	print(round(soma, 10))

-- OUTPUT:
1.5707963268
3.1415926536
4.7123889804
6.2831853072
7.853981634
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:20:36) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x ** (2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
7.853981634
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:21:50) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(2 * i + +3))/factorial(2 * i + 3)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
6.283188906
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:22:11) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(2 * i + +3))/factorial(2 * i + 3)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
6.283188906
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:23:22) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma  - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(2 * i + +3))/factorial(2 * i + 3)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
-1.570792728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:13) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(2 * i + +3))/factorial(2 * i + 3)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
6.283188906
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:24:39) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(2 * i + 3))/factorial(2 * i + 3)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
6.283188906
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:03) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
7.853981634
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:25:49) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:26:03) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:26:22) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:26:40) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:26:47) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:27:32) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
2.3012952459
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:27:52) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:28:01) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:30:21) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x ** (2 * i + 1))/factorial(2 * i +1) -
	i = i + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 8
    soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x ** (2 * i + 1))/factorial(2 * i +1) -
                                                                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:30:40) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x + (x **(2 * i + 1))/factorial(2 * i + 1) - (x ** (2 * i + 1))/factorial(2 * i +1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
7.853981634
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:01) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x ** (2 * i + 1))/factorial(2 * i +1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
7.853981634
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:27) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x ** (2 * i + 3))/factorial(2 * i +3) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
6.283188906
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:47) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:31:54) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:33:06) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 3))/factorial(2 * i + 3) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
7.1234791161
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:35:20) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(4 * i + 1))/factorial(4 * i + 1)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
7.2033358393
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:35:31) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(4 * i + 1))/factorial(4 * i + 1)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
7.2033358393
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:35:51) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
7.853981634
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:35:58) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
7.853981634
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:37:48) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
7.853981634
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:37:53) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
7.853981634
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:38:04) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + (x **(2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
7.853981634
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:38:46) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:38:56) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:40:02) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 1
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + 
	i = i + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 8
    soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) + 
                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:40:08) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 1
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:40:16) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 1
fim = k - 1
while(i <= fim):
	soma = soma + x - (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
5.5526863881
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:41:46) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = x
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
3.8720915727
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:50:03) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = x
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + (x **(2 * i + 1))/factorial(2 * i + 1) - (x **(2 * i + 1))/factorial(2 * i + 1)
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:53:37) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + (-1) ** 1 * (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
-2.3012952459
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:54:04) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + (-1) ** 1 + (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
-2.6987047541
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:54:31) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + (-1) ** i * (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:54:38) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + (-1) ** i * (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:54:55) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + (-1) ** i * (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:55:18) 
-- CODE:
from math import*
x = eval(input("angulo: "))
k = int(input("termos da serie: "))
soma = 0
i = 0
fim = k - 1
while(i <= fim):
	soma = soma + (-1) ** i * (x **(2 * i + 1))/factorial(2 * i + 1) 
	i = i + 1
print(round(soma, 10))
-- EXECUTION TIME:
0.180153
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
